非推奨コマンドに対応